--- a/package.json
+++ b/package.json
@@ -11,7 +11,5 @@
   "devDependencies": {
     "vite": "^5.4.1"
   },
-  "dependencies": {
-    "normalize.css": "^8.0.1"
-  }
+  "dependencies": {}
 }
