--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "prettier": "^3.3.3",
     "vite": "^5.4.1"
-  },
-  "dependencies": {}
+  }
 }
