--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "devDependencies": {
     "prettier": "^3.3.3",
+    "stylelint": "^16.9.0",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-config-two-dash-bem": "^1.0.0",
+    "stylelint-order": "^6.0.4",
     "vite": "^5.4.1"
   }
 }
