--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "husky": "^9.1.6",
     "prettier": "^3.3.3",
     "stylelint": "^16.9.0",
     "stylelint-config-rational-order": "^0.1.2",
