--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+  "parcel-namer-rewrite": {
+    "hashing": "never"
+  },
   "devDependencies": {
     "@parcel/transformer-pug": "2.12.0",
     "@parcel/transformer-sass": "2.12.0",
     "@prettier/plugin-pug": "^3.1.0",
     "parcel": "^2.12.0",
+    "parcel-namer-rewrite": "^2.10.3-rc.2",
     "prettier": "^3.3.3"
   }
 }
