added blog preview card project

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "challenges/qr-code-component"]
 	path = challenges/qr-code-component
 	url = git@github.com:ortiz-antonio/qr-code-component.git
+[submodule "challenges/blog-preview-card"]
+	path = challenges/blog-preview-card
+	url = git@github.com:ortiz-antonio/blog-preview-card.git
