--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@prettier/plugin-pug": "^3.1.0",
     "parcel": "^2.12.0",
     "parcel-namer-rewrite": "^2.10.3-rc.2",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "sass": "^1.79.4"
   }
 }
