--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "hashing": "never"
   },
   "devDependencies": {
+    "@parcel/config-default": "^2.12.0",
     "@parcel/transformer-pug": "2.12.0",
     "@parcel/transformer-sass": "2.12.0",
     "@prettier/plugin-pug": "^3.1.0",
